[package]
name = "advent_of_code"
version = "0.12.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2024"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"

# Solution dependencies
itertools = "0.13.0"
num = "0.4.3"
pest = "2.7.14"
pest_derive = "2.7.14"
smallvec = { version = "1.13.2", features = [
  "const_generics",
  "const_new",
  "union",
] }
mini-matrix = "0.1.6"
derive_more = { version = "1.0.0", features = ["full"] }
rstest = "0.23.0"
rayon = "1.10.0"
bitvec_simd = "0.20.5"
rustc-hash = "2.1.0"
either = "1.13.0"
indicatif = { version = "0.17.9", features = ["rayon"] }
